# bitcoin-wallet-generator

./: README.md  Vanity Generator.lnk  requirements.txt  run_vanity.bat  run_vanity_generator.bat  vanity_address_generator.py
rust_vanity_generator/: Cargo.toml  run_vanity_generator.bat
rust_vanity_generator/src/: bitcoin.rs  evm.rs  main.rs
