[package]
name = "rust_vanity_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
rand = "0.8.5"
hex = "0.4.3"

# Parallel processing
rayon = "1.8"
num_cpus = "1.16.0"

# CLI and utilities
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0.75"
ctrlc = "3.4"

# Bitcoin-related dependencies
bitcoin = { version = "0.31.0", features = ["rand"] }
bip39 = "1.2.0"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_System_Threading", "Win32_Foundation"] }
